5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1795_3124.log
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:43) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print((round(v,1))
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:00) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:00) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:00) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:00) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:00) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(V,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:20) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(V,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:43) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[0]*n[-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[i]*n[i:-1] )
v = m/(1/n)
print(round(v,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:17) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = ( n[i]*n[i:-1] )
v = m/(1/n)
print(round(1,v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:43) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = m**2/n[]
i = i + 0 
n = v
print(round(n,2))

-- ERROR:
File "XXXX", line 5
    v = m**2/n[]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:44) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = m**2/n[]
i = i + 0 
n = v
print(round(n,2))

-- ERROR:
File "XXXX", line 5
    v = m**2/n[]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:45) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = m**2/n[]
i = i + 0 
n = v
print(round(n,2))

-- ERROR:
File "XXXX", line 5
    v = m**2/n[]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:51) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = m**2/n[]
i = i + 0 
n = v
print(round(n,2))

-- ERROR:
File "XXXX", line 5
    v = m**2/n[]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:03) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = (m**2/n[i])
i = i + 0 
n = v
print(round(n,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:34) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = (m**2/n[i])
	n = v
i = i + 0
print(round(n,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:49:36) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = (m**2/n[i])
	n = v
i = i + 0
print(round(n,2))

-- EXECUTION TIME:
0.384916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3124/main.py", line 4, in <module>
    while ( n(i) < size(n)):
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:39) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = (m**2/n[i])
	n = v
i = i + 0
print(round(n,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:49) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i=0
while ( n(i) < size(n)):
	v = (m**2/n[i])
	n = v
i = i + 0
print(round(n,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:55) 
-- CODE:
from numpy import*
n=array(eval(input("numeros reais positivos: ")))
i = 0
m = n[0]*
	n = v
i = i + 0
print(round(n,2))

-- ERROR:
File "XXXX", line 4
    m = n[0]*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
